[gd_scene load_steps=3 format=3 uid="uid://blq3dgsv2ksm5"]

[ext_resource type="Script" path="res://drop/drop.gd" id="1_8y577"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nvd1q"]
size = Vector2(24, 24)

[node name="drop" type="Area2D" groups=["drops"]]
collision_layer = 4
script = ExtResource("1_8y577")

[node name="dropTexture" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_nvd1q")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
